--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -7,6 +7,27 @@ body {
   color: #666666;
   margin: 0 auto;
   text-align: center;
+  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+}
+
+.clearfix:before,
+.clearfix:after {
+    content: " "; /* 1 */
+    display: table; /* 2 */
+}
+
+.clearfix:after {
+    clear: both;
+}
+
+/*
+ * For IE 6/7 only
+ * Include this rule to trigger hasLayout and contain floats.
+ */
+
+.clearfix {
+    *zoom: 1;
 }
 
 h1 {
@@ -38,10 +59,9 @@ a, a:hover, a:active, a:visited {
 }
 /* ================== PRODUCT LIST CSS ================== */
 
-.product-list-masonry {
+.product-list {
   margin: 0 auto;
   max-height: 100vh !important;
-  position: relative;
 }
 
 /* ================== Small Card CSS ================== */
@@ -49,6 +69,7 @@ a, a:hover, a:active, a:visited {
   padding: 1em 0.2em;
   margin: auto;
   height: 550px;
+  z-index: 0;
 }
 
 .home-page-item-wrapper {
@@ -123,73 +144,67 @@ a, a:hover, a:active, a:visited {
 
 /*------------------------------ NAVBAR ------------------------------*/
 .navbar {
-  background-color: white;
-  height: 75px;
+  background: white;
+  height: 50px;
+	border: 1px solid #f2f2f2;
+  box-shadow: 0 0 1px 0 rgba(0, 0, 0, 0.2);
 }
 
 .logo {
-  height: 55px;
-  width: 55px;
-  border-radius: 25%;
+  height: 50px;
+  width: 50px;
   float: left;
-  margin: 10px 20px;
 }
 
-.login-btn {
-	padding: 10px;
-  margin: 20px 20px;
+.navbar .search-section {
+  width: 75%;
+  display: inline-block;
+}
+
+.navbar .search-section .product-search {
+	background-color: #f2f2f2;
 	color: #999999;
-	font-weight: 500;
-	font-size: 17px;
-	display: inline-block;
+  margin: 5px auto;
+  padding: 10px 10px;
+	border: 1px solid #f2f2f2;
+	outline: 0;
+  width: 100%
+}
+
+.login-btn,
+.signup-btn {
+	color: #999999;
+  padding: 5px;
 }
 
 .login-btn:hover {
 	color: #5e9aee;
 }
 
-.navbar .search-section .product-search {
-	background-color: #f2f2f2;
-	color: #999999;
-	padding: 9px 3px;
-	border: 1px solid #f2f2f2;
-	border-radius: 4px;
-	font-size: 11px;
-	font-weight: 500;
-	height: 40px;
-  width: 70%;
-  clear: none;
-	outline: 0;
-  margin: 25px 0 10px 0;
-}
-
 .navbar .right-side {
 	float: right;
+  clear: none;
+  width: 20%;
 }
 
-.navbar .right-side .profile-menu {
-  margin: 13px 20px;
+.navbar .right-side > * {
+  display: inline-block;
+  float: right;
+  margin: 0 10px;
 }
 
 .navbar .right-side .profile-menu img {
-  height: 40px;
-  width: 40px;
+  height: 45px;
+  width: 45px;
   border-radius: 50%;
 }
 
 .navbar .right-side .categories-menu i {
-  margin: 15px 0;
-  padding: 5px;
-  font-size: 30px;
+  font-size: 41px;
 }
 
+.categories-nav,
 .profile-nav {
-  margin: 6px 64px 0 0;
-  border: 1px solid #f2f2f2;
-}
-
-.categories-nav {
-  margin: 6px 10px 0 0;
   border: 1px solid #f2f2f2;
 }
 
@@ -256,7 +271,6 @@ button:hover {
 
 /* POST POPUP */
 .post-popup {
-  z-index: 10000000000;
 	width: 90%;
 	right: 0;
 	top: 10%;
@@ -265,6 +279,7 @@ button:hover {
   position: relative;
   overflow-y: scroll;
   height: 600px;
+  z-index: 10000;
 }
 
 .post-popup #categorySelection,
@@ -304,7 +319,6 @@ button:hover {
     text-align:center;
     line-height:100%;
     color:#fff;
-    z-index: inherit;
 }
 
 .popup-close:hover {
@@ -561,7 +575,6 @@ img.profile-btn.medium-avatar {
 	background-color: white;
 	border-radius: 4px;
 	text-align: left;
-  z-index: 500;
 }
 
 .profile-menu .profile-nav,
@@ -593,7 +606,6 @@ img.profile-btn.medium-avatar {
   position: fixed;
   bottom: 1em;
   right: 1em;
-  z-index: 1000000;
 }
 
 .post-btn {
@@ -663,7 +675,6 @@ section.post-section {
   bottom: 6em;
   right: 1em;
   margin: 0;
-  z-index: 100000;
 }
 
 img.shuffle-btn {
@@ -729,88 +740,4 @@ img.shuffle-btn {
 }
 .slide-enter.slide-enter-active {
   opacity: 1;
-}
-
-
-/*------------------------------ CARD FLIPPING ------------------------------*/
-
-/* entire container, keeps perspective */
-.flip-container-large, .flip-container-medium, .flip-container-small {
-  -webkit-perspective: 1000;
-  -moz-perspective: 1000;
-  -o-perspective: 1000;
-	perspective: 1000px;
-  margin-top: 15px;
-  margin-left: 7.5px;
-  margin-right: 7.5px;
-}
-	/* flip the pane when hovered */
-	.flip-container:hover .flip-product, .flip-container.hover .flip-product {
-		transform: rotateY(180deg);
-    -webkit-transform: rotateY(180deg);
-    -moz-transform: rotateY(180deg);
-    -o-transform: rotateY(180deg);
-	}
-
-.flip-container-large, .front-large, .back-large {
-  height: auto;
-  width: auto;
-}
-
-.flip-container-medium, .front-medium, .back-medium {
-  height: auto;
-  width: auto;
-}
-
-.flip-container-small, .front-small, .back-small {
-  height: 200px;
-  width: 320px;
-}
-
-/* flip speed goes here */
-.flip-product {
-
-	transition: 0.6s;
-  -webkit-transition: 0.6s;
-  -moz-transition: 0.6s;
-  -o-transition: 0.6s;
-
-	transform-style: preserve-3d;
-  -webkit-transform-style: preserve-3d;
-  -moz-transform-style: preserve-3d;
-  -o-transform-style: preserve-3d;
-
-	position: relative;
-}
-
-/* hide back of pane during swap */
-.front, .back {
-	backface-visibility: hidden;
-  -webkit-backface-visibility: hidden;
-  -moz-backface-visibility: hidden;
-  -o-backface-visibility: hidden;
-
-	position: absolute;
-	top: 0;
-	left: 0;
-}
-
-/* front pane, placed above back */
-.front {
-	z-index: 2;
-	/* for firefox 31 */
-	transform: rotateY(0deg);
-  -webkit-transform: rotateY(0deg);
-  -moz-transform: rotateY(0deg);
-  -o-transform: rotateY(0deg);
-  margin: 0 auto;
-  position: relative;
-}
-
-/* back, initially hidden pane */
-.back {
-	transform: rotateY(180deg);
-  -webkit-transform: rotateY(180deg);
-  -moz-transform: rotateY(180deg);
-  -o-transform: rotateY(180deg);
 }
